# reflex

./: .gitignore  CLAUDE.md  Justfile  README.md  docker-compose.yml
.github/workflows/: brainbox-docker-publish.yml  ci-brainbox.yml  docker-brainbox.yml  publish-api-docker.yml  release-brainbox.yml  release-container-lifecycle.yml  release-reflex.yml  release-shell-profiler.yml
Formula/: brainbox.rb  ink-bunny.rb  reflex.rb  shell-profiler.rb
brainbox/: pyproject.toml
brainbox/Formula/: brainbox.rb
brainbox/agents/roles/: merge-queue.md  worker.md
brainbox/dashboard/src/: App.svelte
brainbox/dashboard/src/lib/: AppShell.svelte  Badge.svelte  ContainersPanel.svelte  DashboardPanel.svelte  EmptyState.svelte  HubActivity.svelte  MetricsTable.svelte  Modal.svelte  NewSessionModal.svelte  Notifications.svelte  ObservabilityPanel.svelte  SessionCard.svelte  SessionInfoModal.svelte  Sidebar.svelte  StatCard.svelte  StatsGrid.svelte  TerminalFrame.svelte  ToolBreakdown.svelte  TraceTimeline.svelte  api.js  panels.js
brainbox/scripts/: brainbox  build.sh  run.sh
brainbox/setup/: ttyd-wrapper.sh
brainbox/src/brainbox/: __main__.py  api.py  bundle.py  config.py  container_api.py  cosign.py  hardening.py  langfuse_client.py  lifecycle.py  mcp_server.py  models.py  models_api.py  rate_limit.py  registry.py  router.py  validation.py
brainbox/src/brainbox/backends/: docker.py
brainbox/tests/: test_api_prefix.py  test_artifacts.py  test_cloud_mounts.py  test_config_roles.py  test_cosign.py  test_exec.py  test_langfuse_api.py  test_langfuse_client.py  test_profile_env.py  test_secrets.py
container-lifecycle/: .env.secrets.tpl  .gitignore
container-lifecycle/scripts/: run.sh
docs/: architecture-overview.md
reflex/: .gitignore  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  CREDITS.md  KNOWN_ISSUES.md  README.md  release-please-config.json
reflex-claude-marketplace/: .release-please-manifest.json
(+103 files in other folders)
