[project]
name = "brainbox"
version = "0.13.18"
description = "Sandboxed Docker container orchestration for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "docker>=7.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "sse-starlette>=2.1",
    "boto3>=1.26",
    "slowapi>=0.1.9",
    "httpx>=0.28",
]

[project.scripts]
brainbox = "brainbox.__main__:main"
manage-secrets = "brainbox.manage_secrets:main"

[project.optional-dependencies]
cli = ["questionary>=2.0", "rich>=13.9"]
mcp = ["mcp[cli]>=1.9"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brainbox"]

[tool.ruff]
target-version = "py311"
line-length = 100
